[package]
name = "guardian-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.13"
xcap = "0.9"
image = "0.25"
enigo = "0.3.0"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.0"
chrono = "0.4"
url = "2.5"
futures-util = "0.3"
ffmpeg-next = "7.0" # ← Esta es la que faltaba añadir
