[env]
# Esto le dice a pkg-config exactamente dónde buscar los .pc de FFmpeg 6
PKG_CONFIG_PATH = "/opt/homebrew/opt/ffmpeg@6/lib/pkgconfig"
# Fuerza a que el enlazador busque las librerías estáticas/locales de esa ruta
PKG_CONFIG_ALL_STATIC = "1"

[package]
name = "guardian-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.13"
xcap = "0.9"
image = "0.25"
enigo = "0.3.0"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.0"
chrono = "0.4"
url = "2.5"
futures-util = "0.3"
ffmpeg-next = { version = "7.1.0", features = ["ffmpeg4"] }
eframe = "0.34.3"
axum = "0.8.9"
arboard = "3.3"
